[gd_scene load_steps=4 format=3 uid="uid://b2anud6ey34mu"]

[ext_resource type="Theme" uid="uid://c6j20s0418q2g" path="res://resources/main_theme.tres" id="1_blc51"]
[ext_resource type="Script" uid="uid://bxpx4m460qrsw" path="res://menus/pause/pause_menu.gd" id="2_jb73q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_644di"]
bg_color = Color(0.129558, 0.129559, 0.129558, 0.392157)

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_blc51")
script = ExtResource("2_jb73q")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_644di")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.0
offset_top = -182.0
offset_right = 145.0
offset_bottom = 182.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_blc51")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "Paused "

[node name="ResumeButton" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Resume"

[node name="ExitButton" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Exit "

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = 450

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Label2" type="Label" parent="CanvasLayer/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Volume"
horizontal_alignment = 1

[node name="VolumeBar" type="HSlider" parent="CanvasLayer/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
value = 100.0
